# good_practices_ws

./: .gitignore
python_bad/: readme.md  requirements.txt  setup.py
python_bad/models/allegro/: allegro_hand_model.py
python_bad/scripts/: robot_model_example.py
python_bad/src/python_gp/: robot_model.py
python_better/python_bad/: readme.md  requirements.txt  setup.cfg  setup_env.bash
python_better/python_bad/scripts/: robot_model_example.py
