[metadata]
name = "python_gp",
description = "A short description concerning the file",
author = "Loïc Niederauser",
license = "Closed",
# license_file = LICENSE,
install_requires=requirements,
tests_require=requirements_dev,
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir =
	=src
zip_safe = no